--- a/sections/acknowledgement.tex
+++ b/sections/acknowledgement.tex
@@ -1,5 +1,5 @@
 \section*{Acknowledgements}
-MR is supported by XXXXXX. This project has received funding from the European Research Council (ERC) under the European Union’s Horizon 2020 research and innovation program (grant agreement 853291). FB is a University Research Fellow. MR would like to thank CCAPP, in particular, John Beacom and Lisa Colarosa, for their hospitality and support. We would like to thank Tanveer Karim and Sukhdeep Singh for helpful discussions, and Rongpu Zhou for providing the raw galaxy density maps and imaging systematic maps. We acknowledge the support and resources from the Ohio Supercomputer Center \citep[OSC;][]{OhioSupercomputerCenter1987}. This research has made use of the arXiv preprint server, NASA’s Astrophysics Data System, Github's online software development platform, and many open-source software, such as Pytorch, Nbodykit, HEALPix, Fitsio, Scikit-Learn, NumPy, SciPy, Pandas, IPython, and Jupyter. 
+MR is supported by XXXXXX. This project has received funding from the European Research Council (ERC) under the European Union’s Horizon 2020 research and innovation program (grant agreement 853291). FB is a University Research Fellow. MR would like to thank CCAPP, in particular, John Beacom and Lisa Colarosa, for the hospitality and support. We would like to thank Tanveer Karim and Sukhdeep Singh for helpful discussions, and Rongpu Zhou for providing the raw galaxy density maps and imaging systematic maps. We acknowledge the support and resources from the Ohio Supercomputer Center \citep[OSC;][]{OhioSupercomputerCenter1987}. This research has made use of the arXiv preprint server, NASA’s Astrophysics Data System, Github's online software development platform, and many open-source software, such as Pytorch, Nbodykit, HEALPix, Fitsio, Scikit-Learn, NumPy, SciPy, Pandas, IPython, and Jupyter. 
 
 
 This research is supported by the Director, Office of Science, Office of High Energy Physics of the U.S. Department of Energy under Contract No. DE–AC02–05CH11231, and by the National Energy Research Scientific Computing Center, a DOE Office of Science User Facility under the same contract; additional support for DESI is provided by the U.S. National Science Foundation, Division of Astronomical Sciences under Contract No. AST-0950945 to the NSF’s National Optical-Infrared Astronomy Research Laboratory; the Science and Technologies Facilities Council of the United Kingdom; the Gordon and Betty Moore Foundation; the Heising-Simons Foundation; the French Alternative Energies and Atomic Energy Commission (CEA); the National Council of Science and Technology of Mexico (CONACYT); the Ministry of Science and Innovation of Spain (MICINN), and by the DESI Member Institutions.
