--- a/sections/authorlist.tex
+++ b/sections/authorlist.tex
@@ -2,7 +2,7 @@
 
 \author[M. Rezaie et al.]{Mehdi Rezaie$^{1}$, Ashley J. Ross$^{2}$, Hee-Jong Seo$^{3,4}$,  Hui Kong$^{5}$,  Anna Porredon$^{6}$,\newauthor
 Lado Samushia$^{1}$, Edmond Chaussidon$^{7}$, Alex Krolewski$^{8,9, 10}$, Arnaud de Mattia$^{7}$,\newauthor
-Santiago Avila$^{5}$, Benedict Bahr-Kalus$^{11}$, Jose Bermejo-Climent$^{12}$, Florian Beutler$^{6}$,\newauthor 
+Santiago Avila$^{5}$, Benedict Bahr-Kalus$^{11}$, Jose R. Bermejo-Climent$^{12}$, Florian Beutler$^{6}$,\newauthor 
 Klaus Honscheid$^{2,13}$, Eva-Maria Mueller$^{14,15}$, Adam Myers$^{16}$,\newauthor
 Nathalie Palanque-Delabrouille$^{4,7}$, Will Percival$^{8,9,10}$, Christophe Yeche$^{7}$
 \\~\\
@@ -18,7 +18,7 @@ $^{8}$Department of Physics and Astronomy, University of Waterloo, 200 Universit
 $^{9}$Perimeter Institute for Theoretical Physics, 31 Caroline St. North, Waterloo, ON N2L 2Y5, Canada\\
 $^{10}$Waterloo Centre for Astrophysics, University of Waterloo, 200 University Ave W, Waterloo, ON N2L 3G1, Canada\\
 $^{11}$Korea Astronomy and Space Science Institute, Yuseong-gu, Daedeok-daero 776, Daejeon 34055, Republic of Korea\\
-$^{12}$ ??? \\
+$^{12}$ Department of Physics and Astronomy, University of Rochester, 500 Joseph C. Wilson Boulevard, Rochester, NY 14627, USA \\
 $^{13}$Department of Physics, The Ohio State University, 191 West Woodruff Avenue, Columbus, OH 43210, USA\\
 $^{14}$Institute of Cosmology and Gravitation, Dennis Sciama Building, University of Portsmouth, Portsmouth PO1 3FX, UK \\
 $^{15}$Department of Physics \& Astronomy, University of Sussex, Brighton BN1 9QH, UK\\
