--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -20,10 +20,10 @@ Currently, the most precise constraints on $\fnl$ from LSS reach a level of $\si
 
 However, further work is needed to fully harness the potential of the scale-dependent bias effect in constraining $\fnl$ with LSS. The amplitude of the $\fnl$ signal in the galaxy distribution is proportional to a bias parameter $b_{\phi}$. Assuming the universality relation, $b_{\phi} \sim (b - p)$, where $b$ is the linear halo bias and $p=1$ is a parameter that describes the response of galaxy formation to primordial potential perturbations in the presence of local PNG \citep[see, e.g.,][]{slosar2008constraints}. The theoretical uncertainties on $p$ is not very well constrained for other tracers of matter \citep{2020JCAP...12..013B, 2020JCAP...12..031B}, and \cite{2022JCAP...11..013B} showed that marginalizing over $p$ even with wide priors leads to biased $\fnl$ constraints because of parameter space projection effects. More simulation-based studies are necessary to investigate the halo-assembly bias and the relationship between $b_{\phi}$ and $b$ for various galaxy samples. For instance, \cite{2023JCAP...01..023L} used N-body simulations to investigate secondary halo properties, such as concentration, spin and sphericity of haloes, and found that halo spin and sphericity preserve the universality of the halo occupation function while halo concentration significantly alters the halo function.  Without better-informed priors on $p$, it is argued that the scale-dependent bias effect can only  be used to constrain the $b_{\phi}\fnl$ term \citep[see, e.g.,][]{2020JCAP...12..031B}. Nevertheless, the detection significance of local PNG remains unaffected by various assumptions regarding $p$. This means that a nonzero detection of $b_{\phi}\fnl$ at a certain confidence level will still indicate a nonzero detection of $\fnl$ at that same confidence level. In this work, we assume the universality relation and do not marginalize over $p$.  
 
-In addition to the theoretical uncertainties, measuring $\fnl$ using the scale-dependent bias effect is nonetheless incredibly challenging due to various imaging systematic effects that can modulate the galaxy power spectrum on large scales. For instance, Galactic extinction, astronomical seeing, stellar contamination, and photometric calibration can induce spurious fluctuations in the observed density field of targets, and thus give rise to an excess clustering power on large scales \citep{ross2011, huterer2013calibration}, which can be miss-interpreted as the signature of non-zero local PNG \citep[see, e.g.,][]{PhysRevLett.106.241301}. The issue of imaging systematic effects has proven to be a significant obstacle in the past efforts to constrain $\fnl$ using the large-scale clustering of galaxies and quasars \citep[see, e.g.,][]{pullen2013systematic, Ho2015JCAP...05..040H}. It is anticipated that imaging systematic errors will be particularly problematic for wide-area galaxy surveys that observe regions of the night sky closer to the Galactic plane and that seek to incorporate more lenient selection criteria to accommodate fainter galaxies \citep[see, e.g,][]{kitanidis2020imaging}.  
+In addition to the theoretical uncertainties, measuring $\fnl$ using the scale-dependent bias effect is nonetheless incredibly challenging due to various imaging systematic effects that can modulate the galaxy power spectrum on large scales. For instance, Galactic extinction, astronomical seeing, stellar contamination, and photometric calibration can induce spurious fluctuations with large-scale characteristics in the observed density field of targets, and thus give rise to an excess clustering power on large scales \citep{ross2011, huterer2013calibration}, which can be miss-interpreted as the signature of non-zero local PNG \citep[see, e.g.,][]{PhysRevLett.106.241301}. The issue of imaging systematic effects has proven to be a major challenge in the past efforts to constrain $\fnl$ using the large-scale clustering of galaxies and quasars \citep[see, e.g.,][]{2013MNRAS.428.1116R,pullen2013systematic, Ho2015JCAP...05..040H}. It is anticipated that imaging systematic errors will be particularly problematic for wide-area galaxy surveys that observe regions of the night sky closer to the Galactic plane and that seek to incorporate more lenient selection criteria to accommodate fainter galaxies \citep[see, e.g,][]{kitanidis2020imaging}.  
 
 
 
-The primary objective of this paper is to utilize the scale-dependent bias signature in the angular power spectrum of luminous red galaxies selected from DESI imaging data to constrain the value of $\fnl$. With an emphasis on a careful treatment of imaging systematic errors, we aim to lay the groundwork for subsequent studies of local PNG with DESI spectroscopy. To prepare our sample for measuring such a delicate signal, we employ linear multivariate regression and neural networks to mitigate spurious density fluctuations and ameliorate the excess clustering power caused by imaging systematics. With cross correlation and summary statistics computed between the galaxy density and imaging systematics, we thoroughly characterize and examine potential sources of systematic error, including survey depth, astronomical seeing, photometric calibration, Galactic extinction, and local stellar density. Our findings are validated using suites of lognormal simulations featuring values of $\fnl=0$ and $76.9$.
+The primary objective of this paper is to utilize the scale-dependent bias signature in the angular power spectrum of luminous red galaxies selected from DESI imaging data to constrain the value of $\fnl$. With an emphasis on a careful treatment of imaging systematic errors, we aim to lay the groundwork for subsequent studies of local PNG with DESI spectroscopy. To prepare our sample for measuring such a delicate signal, we employ linear multivariate regression and neural networks to mitigate spurious density fluctuations and ameliorate the excess clustering power caused by imaging systematics. We thoroughly investigate potential sources of systematic error, including survey depth, astronomical seeing, photometric calibration, Galactic extinction, and local stellar density. Our methods and results are validated against simulations, with and without imaging systematics.
 
 This paper is structured as follows. Section \ref{sec:data} describes the galaxy sample from DESI imaging and lognormal simulations with, or without, PNG and synthetic systematic effects. Section \ref{sec:method} outlines the theoretical framework for modelling the angular power spectrum, strategies for handling various observational and theoretical systematic effects, and statistical techniques for measuring the significance of remaining systematics in our sample after mitigation. Our results are presented in Section \ref{sec:results}, and Section \ref{sec:conclusion} summarizes our conclusions and directions for future work.
